--- a/src/App.scss
+++ b/src/App.scss
@@ -1,32 +1,10 @@
-/* make the customizations */
-$theme-colors: (
-  "primary": rgb(66, 0, 255),
-  "info": tomato,
-  "danger": teal,
-);
-
 @import "~bootstrap/scss/bootstrap";
+@import "./assets/scss/base";
+@import "./assets/scss/hero";
+@import "./assets/scss/navbar";
+@import "./assets/scss/utils";
+@import "./assets/scss/button";
 
 body {
   font-family: "Ubuntu", sans-serif;
-}
-
-.mainNavbar {
-  display: flex;
-  justify-content: space-between;
-}
-
-.subNav {
-  background: white;
-  border-bottom: 1px solid rgb(224, 224, 224);
-  transition: 0.4s ease;
-  &:hover {
-    height: auto;
-  }
-  .navItems {
-    display: flex;
-  }
-  a {
-    color: rgb(46, 46, 46);
-  }
 }
