--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,12 +1,30 @@
 .navbar {
-  padding: 0.8em 1.2em;
-}
-.mainNavbar {
   display: flex;
-  justify-content: space-between;
+  .navbar__content {
+    //
+  }
+  .navbar__search {
+    flex-grow: 3;
+    display: flex;
+
+    @include media-breakpoint-up(md) {
+      input {
+        display: block;
+        width: 75%;
+        margin: 0 auto;
+      }
+    }
+  }
+
+  .navbar__links {
+    flex-grow: 1;
+    justify-content: flex-end;
+  }
 }
 
-.subNav {
+.subNavbar {
+  display: flex;
+  justify-content: space-between;
   background: white;
   border-top: 1px solid rgb(224, 224, 224);
   border-bottom: 1px solid rgb(224, 224, 224);
@@ -20,12 +38,20 @@
   a {
     color: rgb(46, 46, 46);
   }
+  .subNavbar__categories {
+    display: none;
+  }
+  @media (min-width: 768px) {
+    .subNavbar__categories {
+      display: block;
+      .subNavbar__category {
+        margin: 0 10px;
+      }
+    }
+  }
 }
 
 .searchBar {
-  @media (max-width: 550px) {
-    width: 100%;
-  }
 }
 
 // cart icon styles
