products carousel added and authentication working

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@
 @import "./assets/scss/navbar";
 @import "./assets/scss/utils";
 @import "./assets/scss/button";
+@import "./assets/scss/slider";
+@import "./assets/scss/card";
 
 body {
   font-family: "Ubuntu", sans-serif;
